# jetracer-obs-avoid

./: README.md
combined_system/: CMakeLists.txt  package.xml
combined_system/config/: costmap_common_params.yaml  local_costmap_params.yaml  mymap.pgm  mymap.yaml  planner_params.yaml
combined_system/include/model_test/: model_test.h
combined_system/include/path_searching/: kino_astar.h
combined_system/include/plan_manage/: obs_avoid_fsm.h  state_machine.h  traj_manager.h
combined_system/launch/: combined.launch  jetracer.launch  model_test.launch  road_follow.launch  state_machine.launch
combined_system/mapping/: CMakeLists.txt  package.xml
combined_system/mapping/include/: mapping.h
combined_system/mapping/src/: mapping.cpp
combined_system/mapping/tests/: mapping_test.cpp  mapping_test.test
combined_system/notebooks/: RoadFollowing+CollisionAvoidance.ipynb
combined_system/notebooks/road_presence/: data_collection.ipynb  optimise_model.ipynb  test_model.ipynb  train_model.ipynb
combined_system/scripts/: ros_road_follow.py  run_py3_venv.sh
combined_system/src/: kino_astar.cpp  model_test.cpp  obs_avoid_fsm.cpp  state_machine.cpp  traj_manager.cpp  traj_optimizer.cpp
